# HetHypPar

./: .clangd  .gitattributes  .gitignore  .project.gf  .project.gf.bk  CLAUDE.md  HANDOFF.md  PaToH.log.Sun_Oct_26_23-07-13_2025  README.md  km1_kKaHyPar_sea20.ini  larp.md
data/cage13/in/: B.txt  X.txt  cage13.hMetis  row_part_16
data/circuit5M_dc/in/: B.txt
data/nv2/in/: nv2_2k_s1_gpu_i1
data/profile_dot/: breakdown.tsv
data/rankfile/: 16cpu_1gpu.rankfile  8cpu_1gpu.rankfile  README.md  comment.txt
data/rankfile/experiment/: 1pcore_1gpu.rankfile  2pcore_1gpu.rankfile  4pcore.rankfile  4pcore_1gpu.rankfile  6pcore.rankfile
data/sample/in/: A.mtx  B.txt  X_mul.txt  part2-imbal.txt
data/sample320/in/: A.hMetis  A.mtx  B.txt  row_part_16  row_part_2
docs/: benchmark-analysis-2rank-1000iter.md  benchmark-analysis-2rank.md  dot-product-profiling.md  fix-mpi-send-use-after-free.md  spmv-bandwidth-analysis.md
src/: CMakeLists.txt
src/dependencies/: CMakeLists.txt
src/dependencies/bora_spmxv/: CMakeLists.txt  buVector.c  matrix.c  mxv.c  setup.c
src/dependencies/bora_spmxv/include/: bora_matrix.h  bora_spmxv.h
src/dependencies/mmio/: CMakeLists.txt
src/dependencies/mmio/include/: mmio.h
src/dependencies/patoh/: CMakeLists.txt
src/dependencies/patoh/include/: patoh.h
src/entry/: bicgstab_cpu.c  bicgstab_gpu.c  bicgstab_gpu_dp.c  bicgstab_hybrid_async.c  bicgstab_hybrid_async_dp.c  bicgstab_hybrid_dist_dp.c  bicgstab_mpi.c  bicgstab_mpi_gpu.c  bicgstab_mpi_gpu_fusion.cu  bicgstab_mpi_gpu_mt.c  bicgstab_mpi_gpu_pipeline.c  bicgstab_mpi_gpu_pipeline_fusion.cu  hybrid-bicgstab.c  hybrid-bicgstab_cpu.c  hybrid-bicgstab_mpi.c  spmv_cpu.c  spmv_cpu_mkl.c  spmv_cpu_mt.c  spmv_gpu.c  spmv_hybrid.c  spmv_hybrid_async.c  spmv_mpi.c
src/include/: hhp_common.h  hhp_cpu.h  hhp_cuda.h  hhp_dp_helpers.h  hhp_dp_kernels.h  hhp_matrix.h  hhp_util.h  hhp_wrap_bora.h
src/tests/: CMakeLists.txt  test_cpu.c
src/util/: hhp_cpu.c  hhp_cuda.c  hhp_dp_helpers.c  hhp_dp_kernels.cu  hhp_matrix.c  hhp_wrap_bora.c
tools/misc/: 00_create_experiment_files.py  01_run_baselines.py  02_run_mpi_sweep.py  03_run_mpi_gpu_sweep.py  04_analyze_results.py  experiment_log.txt
tools/misc/results/: baselines.json  mpi_gpu_sweep.json  mpi_sweep.json
tools/notebook/: benchmark_analysis.ipynb  kahypar-gpu.ipynb  kahypar.ipynb  kahypar.md  kahypar.py  mxv_test.ipynb  parse_results.ipynb
tools/notebook/.ipynb_checkpoints/: kahypar-gpu-checkpoint.ipynb  parse_results-checkpoint.ipynb  patpart-checkpoint.ipynb
tools/python/: analyze_speedups.py  command_history.txt  compare_devptr.py  compare_devptr_hybrid.py  gpu_matrix_partition.py  init_matrices.py  matrix_partition.py  parse_benchmark_results.py  plot_profile_boxplots.py  profile_dot_breakdown.py  quick_mpi_gpu_test.py  quick_mpi_test.py  run_benchmarks.py  sample_mpi.py  sample_mpi_gpu.py  setup_n_block_diag.py  split_partitioned_matrix.py  sweep_block_diag.py  sweep_devptr_hybrid.py  test_kahypar.py
tools/scripts/: prepare_spmv_input.m  process_matrix.m  process_matrixi.m  test-mpi.sh  test.sh
